# transmission-rpc

./: .pre-commit-config.yaml  pyproject.toml
transmission_rpc/: __init__.py  exceptions.py  schemas.py
